--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Junaid Khan - Frontend Architecture Consultant. Specializing in performance optimization, scalable React applications, and modern web development."
+      content="Junaid Khan - Frontend Architect. Specializing in performance optimization, scalable React applications, and modern web development."
     />
-    <title>Junaid Khan - Frontend Architecture Consultant</title>
+    <title>Junaid Khan - Frontend Architect</title>
   </head>
   <body>
     <div id="root"></div>
